infra/observability/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-lb
  namespace: observability
  labels:
    app: grafana
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  selector:
    app: grafana
  type: LoadBalancer
  ports:
    - name: http
      port: 3000
