infra/observability/ingress.yaml
###### This config is not woring properly. LB targets become unhealthy

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-observability
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: observability-alb
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    #alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
    -  http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  number: 80
